# expenditure-overview

./: .gitignore  Cargo.toml  README.md  docker-compose.yml  justfile  rustfmt.toml  setup.sh  test.http
backend/: .dockerignore  Dockerfile  setup.py
backend/app/: main.py
backend/app/api/: api.py
database/: csv_schema.json
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
nginx/: nginx.conf
src/: main.rs
src/config/: env_config.rs
src/database/: csv_schema.rs  maintenance.rs  mod.rs
src/enum/: mod.rs  schema_keys.rs
src/enumeration/: schema_keys.rs
src/templates/: app.rs  base.rs  index.rs  mod.rs
src/upload/: mod.rs  upload_csv.rs
templates/: biome.json  index.html  package.json  pnpm-lock.yaml  tailwind.config.cjs
templates/assets/: dropzone.js
templates/src/: base.html  index.html
templates/src/app/: app.html  dropzone.html
templates/styles/: tailwind.css
