[package]
name = "expenditure-overview"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = "0.13.0"
axum = "0.8.3"
tokio = { version = "1.44.1", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["fs"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
