[package]
name = "expenditure-overview"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
askama = "0.13.0"
axum = { version = "0.8.3", features = ["multipart"] }
tokio = { version = "1.44.1", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["fs", "limit"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.114"
envy = "0.4.2"
dotenv = "0.15.0"
csv = "1.3.0"
sqlx = { version = "0.8.3", features = [
    "sqlite",
    "runtime-tokio-native-tls",
    "time",
] }
